Add postgres for relational data, and mongo for realtime data

--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
+    "pg": "^8.11.0",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "pirates": "^4.0.6",
@@ -288,7 +289,9 @@
     "start": "node src/app.js",
     "test": "jest --watchAll",
     "start:dev": "nodemon src/app.js",
-    "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config"
+    "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
+    "migrate": "node-pg-migrate",
+    "migrate:test": "node-pg-migrate -f config/database/test.json"
   },
   "keywords": [],
   "author": "",
