--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "jest": "^29.5.0",
     "node-pg-migrate": "^6.2.2",
     "nodemon": "^2.0.22",
+    "pg-hstore": "^2.3.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "name": "exos-api",
   "version": "1.0.0",
   "main": "jest.config.js",
   "dependencies": {
+    "@types/pg": "^8.10.2",
     "acorn": "^8.9.0",
     "acorn-jsx": "^5.3.2",
     "acorn-walk": "^8.2.0",
@@ -219,7 +222,7 @@
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
-    "pg": "^8.11.0",
+    "pg": "^8.11.1",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "pirates": "^4.0.6",
@@ -290,8 +293,9 @@
     "test": "jest --watchAll",
     "start:dev": "nodemon src/app.js",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
-    "migrate": "node-pg-migrate",
-    "migrate:test": "node-pg-migrate -f config/database/test.json"
+    "migrate": "node-pg-migrate -m ./lib/migrations",
+    "migrate:test": "node-pg-migrate -f config/database/postgretest.json -m ./lib/migrations",
+    "migrate:types": "node-pg-migrate -m ./src/migrations --ext ts"
   },
   "keywords": [],
   "author": "",
